src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsT-tmF-wfsBU-wmA.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nwant maximized: A\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized-to-edges false\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated, Maximized]

unmaximize configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
